[package]
name = "rsytup"
version = "0.1.0"
edition = "2021"
authors = ["Michael Kefeder"]
repository = "https://github.com/bedroombuilds/rsytup/"
license = "GPL-3.0-or-later"
keywords = ["video", "youtube"]
categories = ["command-line-utilities", "multimedia"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
async-google-apis-common = "0.3.0"
# TODO: fix dependency once PR #539 is merged
#chrono = "0.4.20"
chrono = { git ="https://github.com/mike-kfed/chrono", branch="impl_error" }
conv = "0.3.3"
env_logger = "0.9.0"
hyper-rustls = "0.22"
hyper = "0.14.19"
image = "0.24.2"
imageproc = "0.23.0"
rusttype = "0.9.2"
serde = "1.0.137"
structopt = "0.3.26"
strum = "0.24.0"
strum_macros = "0.24.0"
tokio = { version = "1.19.2", features = ["rt-multi-thread", "io-util", "macros", "fs"] }
webbrowser = "0.7.1"
